--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,27 +1,32 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container">
-      <a class="navbar-brand" routerLink="/">Dating App</a>
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">Dating App</a>
+    @if (accountService.currentUser()) {
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <li class="nav-item">
+          <a routerLink="/members" routerLinkActive="active" class="nav-link" aria-current="page">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+        </li>
+      </ul>
+    }
 
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ |async">
-          <li class="nav-item">
-            <a routerLink="/members" routerLinkActive="active" class="nav-link" aria-current="page">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
-          </li>
-        </ul>
-        <div class="dropdown" *ngIf="accountService.currentUser$|async" dropdown>
-          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome (User)</a>
+     @if (accountService.currentUser()) {
+        <div class="dropdown" dropdown>
+          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{ accountService.currentUser()!.username }}</a>
           <div class="dropdown-menu" *dropdownMenu>
             <a class="dropdown-item">Edit Profile</a>
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
         </div>
+      }
 
-        <form *ngIf="!(accountService.currentUser$ |async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+      @if (!accountService.currentUser()) {
+        <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
           <input
             name="username"
             [(ngModel)]="model.username"
@@ -37,5 +42,7 @@
             aria-label="Password">
           <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
-    </div>
-  </nav>
+    }
+    &nbsp;
+  </div>  
+</nav>
