--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -16,13 +16,14 @@
     }
 
      @if (accountService.currentUser()) {
-        <div class="dropdown" dropdown>
-          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{ accountService.currentUser()!.username }}</a>
-          <div class="dropdown-menu" *dropdownMenu>
-            <a class="dropdown-item">Edit Profile</a>
-            <a class="dropdown-item" (click)="logout()">Logout</a>
-          </div>
-        </div>
+       <!-- removed these because of directives  -->
+<!--        <div class="dropdown" dropdown>-->
+<!--          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{ accountService.currentUser()!.username }}</a>-->
+<!--          <div class="dropdown-menu" *dropdownMenu>-->
+<!--            <a class="dropdown-item">Edit Profile</a>-->
+<!--            <a class="dropdown-item" (click)="logout()">Logout</a>-->
+<!--          </div>-->
+<!--        </div>-->
       }
 
       @if (!accountService.currentUser()) {
@@ -30,19 +31,19 @@
           <input
             name="username"
             [(ngModel)]="model.username"
-            class="form-control me-2" 
-            type="text" 
-            placeholder="Username" 
+            class="form-control me-2"
+            type="text"
+            placeholder="Username"
             aria-label="Username">
-          <input 
+          <input
             name="password"
             [(ngModel)]="model.password"
-            class="form-control me-2" 
-            type="password" placeholder="Password" 
+            class="form-control me-2"
+            type="password" placeholder="Password"
             aria-label="Password">
           <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
     }
     &nbsp;
-  </div>  
+  </div>
 </nav>
