--- a/DatingApp/client/src/app/app.component.html
+++ b/DatingApp/client/src/app/app.component.html
@@ -1,9 +1,5 @@
 <app-nav></app-nav>
 
-<div class="container m-4" style="margin-top: 100px;">
+<div class="" style="margin-top: 100px;">
    <router-outlet></router-outlet>
 </div>
-
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
