--- a/DatingApp/client/src/app/home/home.component.html
+++ b/DatingApp/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="containter mt-5">
+<div class="hero min-h-screen">
   @if (!registerMode) {
-    <div style="text-align: center;">
+    <div style="text-align: center; color: black;">
       <h1>Find your match</h1>
       <p class="lead">Come in in to view your matches... all you need to do is sign up!</p>
       <div class="text-center">
