--- a/DatingApp/client/src/app/register/register.component.html
+++ b/DatingApp/client/src/app/register/register.component.html
@@ -1,20 +1,20 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
-    <h2 class="text-center text-primary">Sign Up</h2>
-    <hr>
-    <div class="mb-3">
-        <input type="text" class="form-control"
-        name="username"
-        [(ngModel)]="model.username"
-        placeholder="Username">
-        <input type="password" class="form-control"
-        name="password"
-        [(ngModel)]="model.password"
-        placeholder="Password">
-    </div>
+<div class="card bg-slate-100 w-1/2 mx-auto flex flex-col p-6 rounded-lg shadow-lg">
+    <div class="card-title justify-center text-3xl text-primary">Sign Up</div>
+        <div class="card-body w-full">
+        <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off" class="flex flex-col gap-4 w-full">
+                <input type="text" class="input w-full"
+                name="username"
+                [(ngModel)]="model.username"
+                placeholder="Username">
+                <input type="password" class="input w-full"
+                name="password"
+                [(ngModel)]="model.password"
+                placeholder="Password">
 
-    <div class="text-center">
-        <button class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" type="button"(click)="cancel()">Cancel</button>
-
+            <div class="text-center">
+                <button class="btn btn-success me-2" type="submit">Register</button>
+                <button class="btn btn-default" type="button"(click)="cancel()">Cancel</button>
+            </div>
+        </form>
     </div>
-</form>
+</div>
