Member Details Page

--- a/DatingApp/client/src/app/app.component.html
+++ b/DatingApp/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 
-<div class="" style="margin-top: 200px; margin-left: 200px;">
+<div class="" style="margin: 10px; margin-top: 100px; margin-left: 50px;">
    <router-outlet></router-outlet>
 </div>
