--- a/DatingApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp/client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,34 @@
-<p>member-detail works!</p>
+@if (member$ | async; as member){
+    <div class="flex gap-6">
+    <div class="card azure flex flex-col h-[85vh] w-1/4">
+        <img src="{{member.imageURL || '/user.png'}}" alt="image of member"
+        class="rounded-full mx-10 mt-3 object-cover">
+        <div class="card-body">
+
+            <div class="flex flex-col items-center">
+                <div class="flex text-2xl text-primary">
+                    {{member.displayName}}, 25
+                </div>
+
+                <div class="text-sm">{{member.city}}, {{member.country}}</div>
+            </div>
+
+            <div class="divider divider-default"></div>                
+                <ul class="menu rounded-box w-full text-xl">
+                    <li><a routerLink="profile" routerLinkActive="text-primary">Profile</a></li>
+                    <li><a routerLink="profile" routerLinkActive="text-primary">Photo</a></li>
+                    <li><a routerLink="profile" routerLinkActive="text-primary">Messages</a></li>
+
+                </ul>
+            </div>
+            <div class="card-actions justify-between gap-2 px-2 mb-3">
+                <button class="btn btn-primary">Go back</button>
+                <button class="btn btn-primary">Like</button>
+            </div>
+        </div>
+        <div class="card azure w-3/4 p-6">
+            <h3 class="card-title text-3xl text-primary">Profile</h3>
+            <div class = "divider"></div>
+        </div>
+    </div>
+}
