--- a/DatingApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-@if (member$ | async; as member){
+@if (member(); as member){
     <div class="flex gap-6">
     <div class="card azure flex flex-col h-[85vh] w-1/4">
         <img src="{{member.imageURL || '/user.png'}}" alt="image of member"
@@ -13,11 +13,11 @@
                 <div class="text-sm">{{member.city}}, {{member.country}}</div>
             </div>
 
-            <div class="divider divider-default"></div>                
+            <div class="divider divider-primary"></div>                
                 <ul class="menu rounded-box w-full text-xl">
                     <li><a routerLink="profile" routerLinkActive="text-primary">Profile</a></li>
-                    <li><a routerLink="profile" routerLinkActive="text-primary">Photo</a></li>
-                    <li><a routerLink="profile" routerLinkActive="text-primary">Messages</a></li>
+                    <li><a routerLink="photos" routerLinkActive="text-primary">Photos</a></li>
+                    <li><a routerLink="messages" routerLinkActive="text-primary">Messages</a></li>
 
                 </ul>
             </div>
@@ -27,8 +27,11 @@
             </div>
         </div>
         <div class="card azure w-3/4 p-6">
-            <h3 class="card-title text-3xl text-primary">Profile</h3>
-            <div class = "divider"></div>
+            <h3 class="card-title text-3xl text-primary">{{title()}}</h3>
+            <div class = "divider divider-primary"></div>
+            <div>
+                <router-outlet />
+            </div>
         </div>
     </div>
 }
