Member Detail Component Age

--- a/DatingApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp/client/src/app/members/member-detail/member-detail.component.html
@@ -7,7 +7,7 @@
 
             <div class="flex flex-col items-center">
                 <div class="flex text-2xl text-primary">
-                    {{member.displayName}}, 25
+                    {{member.displayName}}, {{member.dateofBirth | age}}
                 </div>
 
                 <div class="text-sm">{{member.city}}, {{member.country}}</div>
