--- a/DatingApp/client/src/app/members/member-card/member-card.component.html
+++ b/DatingApp/client/src/app/members/member-card/member-card.component.html
@@ -3,7 +3,7 @@
         <img src="{{m?.imageURL}}" alt="{{m.displayName}}" class = "rounded-lg">
         <div class = "card-actions z-50 absolute bottom-0 w-full px-3 py-1 rounded-b-lg bg-gradient-to-t from-black via-black/75 to-black-0">
             <div class = "flex flex-col text-white">
-                <span class="font-semibold text-white">{{m.displayName}}, 25</span>
+                <span class="font-semibold text-white">{{m.displayName}}, {{m.dateofBirth | age}}</span>
                 <span class="text-sm text-white">{{m.city}}</span>
             </div>
         </div>
