--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,17 +1,22 @@
 <header class = "p-3 w-full fixed top-0 z-50 bg-gradient-to-r from-primary to-black text-white">
   <div class="flex align-middle items-center px-10 mx-auto gap-3">
-    <a routerLink="/" routerLinkActive="text-accent" [routerLinkActiveOptions]="{exact: true}" class="flex items-center gap-3 max-h-16 border-r-white border-r-2 pr-6">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="size-8">
-        <path fillRule="evenodd" d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z" clipRule="evenodd" />
-      </svg> 
-      <h3 class ="text-2xl font-semibold uppercase block whitespace-nowrap">Dating App</h3>
-    </a>
+    <div class="text-white">
+      <a routerLink="/" routerLinkActive="text-accent" [routerLinkActiveOptions]="{exact: true}"
+          class="flex items-center gap-3 max-h-16 border-r-white border-r-2 pr-6">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7">
+              <path
+                  d="M4.5 6.375a4.125 4.125 0 1 1 8.25 0 4.125 4.125 0 0 1-8.25 0ZM14.25 8.625a3.375 3.375 0 1 1 6.75 0 3.375 3.375 0 0 1-6.75 0ZM1.5 19.125a7.125 7.125 0 0 1 14.25 0v.003l-.001.119a.75.75 0 0 1-.363.63 13.067 13.067 0 0 1-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 0 1-.364-.63l-.001-.122ZM17.25 19.128l-.001.144a2.25 2.25 0 0 1-.233.96 10.088 10.088 0 0 0 5.06-1.01.75.75 0 0 0 .42-.643 4.875 4.875 0 0 0-6.957-4.611 8.586 8.586 0 0 1 1.71 5.157v.003Z" />
+          </svg>
+
+          <h3 class="text-2xl font-semibold uppercase">Dating app</h3>
+      </a>
+  </div>
 
     <nav class = "flex gap-3 my-2 uppercase text-lg text-white">
       @if (accountService.currentUser()){
-      <a routerLink="/members" routerLinkActive="text-accent" class="nav-link" aria-current="page">Matches</a>
-      <a routerLink="/lists" routerLinkActive="text-accent" class="nav-link">Lists</a>
-      <a routerLink="/messages" routerLinkActive="text-accent" class="nav-link">Messages</a>
+      <a routerLink="/members" routerLinkActive="text-accent" [routerLinkActiveOptions]="{exact: true}" class="nav-link" aria-current="page" >Matches</a>
+      <a routerLink="/lists" routerLinkActive="text-accent" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Lists</a>
+      <a routerLink="/messages" routerLinkActive="text-accent" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Messages</a>
       }
     </nav>
 
