--- a/DatingApp/client/src/app/register/register.component.html
+++ b/DatingApp/client/src/app/register/register.component.html
@@ -3,6 +3,10 @@
         <div class="card-body w-full">
         <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off" class="flex flex-col gap-4 w-full">
                 <input type="text" class="input w-full"
+                name="email"
+                [(ngModel)]="model.email"
+                placeholder="Email">
+                <input type="text" class="input w-full"
                 name="username"
                 [(ngModel)]="model.username"
                 placeholder="Username">
