--- a/DatingApp/client/src/app/members/member-profile/member-profile.component.html
+++ b/DatingApp/client/src/app/members/member-profile/member-profile.component.html
@@ -9,7 +9,13 @@
             <span class="font-semibold">Last Scene: </span>
             <span>{{member.lastActive | date: 'longDate'}}</span>
         </div>
-        <div class="text-lg font-semibold text-primary">About {{member.displayName}}</div>
-        <div>{{member.description}}</div>
+        <h3 class="text-lg font-semibold text-primary">About {{member.displayName}}</h3>
+        @if (memberService.editMode()){
+            <div>Profile Form Goes Here</div>
+        }
+        @else {
+            <div>{{member.description}}</div>
+        }
+       
     </div>
 }
