--- a/DatingApp/client/src/app/members/member-profile/member-profile.component.html
+++ b/DatingApp/client/src/app/members/member-profile/member-profile.component.html
@@ -11,7 +11,47 @@
         </div>
         <h3 class="text-lg font-semibold text-primary">About {{member.displayName}}</h3>
         @if (memberService.editMode()){
-            <div>Profile Form Goes Here</div>
+            <form #editForm="ngForm" (ngSubmit)="updateProfile()" class="flex flex-col w-full gap-4">
+                <label class="floating-label">
+                    <span>Display Name</span>
+                    <input
+                    class="input w-full"
+                     type="text" 
+                     name="displayName" 
+                     [(ngModel)]="editableMember.displayName" 
+                     placeholder="Display Name">
+                </label>
+                <label class="floating-label">
+                    <span>Description</span>
+                    <input
+                    class="textarea w-full"
+                     type="text" 
+                     name="Description" 
+                     [(ngModel)]="editableMember.description" 
+                     placeholder="Description">
+                </label>
+                <label class="floating-label">
+                    <span>City</span>
+                    <input
+                    class="input w-full"
+                     type="text" 
+                     name="city" 
+                     [(ngModel)]="editableMember.city" 
+                     placeholder="City">
+                </label>
+                <label class="floating-label">
+                    <span>Country</span>
+                    <input
+                    class="input w-full"
+                     type="text" 
+                     name="country" 
+                     [(ngModel)]="editableMember.country" 
+                     placeholder="Display Name">
+                </label>
+                <div class="flex self-end">
+                    <button type="submit" class="btn btn-success">Save</button>
+                </div>
+            </form>
         }
         @else {
             <div>{{member.description}}</div>
