Added Claims Principal Work and Caching

--- a/DatingApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-@if (member(); as member){
+@if (memberService.member(); as member){
     <div class="flex gap-6">
     <div class="card azure flex flex-col h-[85vh] w-1/4">
         <img src="{{member.imageURL || '/user.png'}}" alt="image of member"
