--- a/DatingApp/client/src/app/members/member-profile/member-profile.component.html
+++ b/DatingApp/client/src/app/members/member-profile/member-profile.component.html
@@ -1,4 +1,4 @@
-@if(member(); as member){
+@if(memberService.member(); as member){
     <div class="flex flex-col gap-3">
         <div class="flex gap-2">
             <span class="font-semibold">Member Since: </span>
@@ -49,7 +49,11 @@
                      placeholder="Display Name">
                 </label>
                 <div class="flex self-end">
-                    <button type="submit" class="btn btn-success">Save</button>
+                    <button 
+                    type="submit" 
+                    class="btn btn-success"
+                    [disabled]="!editForm.dirty"
+                    >Save</button>
                 </div>
             </form>
         }
