--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -21,6 +21,11 @@
     </nav>
 
 
+    @if(busyService.busyRequestCount()> 0){
+      <span class="loading loading-spinner text-accent"></span>
+    }
+
+
     <div class="flex align-middle ml-auto gap-3">
       <div class="dropdown margin-right-10 dropdown-end">
         <button tabindex="-1" class="flex flex-col justify-center align-middle cursor-pointer uppercase text-xs">
