--- a/DatingApp/client/src/app/shared/image-upload/image-upload.component.html
+++ b/DatingApp/client/src/app/shared/image-upload/image-upload.component.html
@@ -1,18 +1,33 @@
 <div class="flex w-full gap-6 min-h-100">
     <div class="flex items-center gap-4 w-2/3">
-        <label for="dropzone-file"
+        <label
+        (dragover)="onDragOver($event)"
+        (dragleave)="onDragLeave($event)"
+        (drop)="onDrop($event)"
+        [class.border-purple-600] = "isDragging"
+        [class.border-4] = "isDragging"
+        [class.bg-purple-100] = "isDragging"
+        for="dropzone-file"
         class="flex flex-col items-center justify-center w-full border-2 border-gray-300 h-full border-dashed rounded-lg cursor-pointer">
         <p class="mb-2 text-lg">Click to upload, or drag and drop photos.</p>
         <input type="file" id="dropzone-file" class="hidden">
         </label>
     </div>
-    <div class="flex flex-col w-1/3 gap-3">
-        <div class="flex justify-center border-2 border-gray-300 rounded-lg">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png?20200919003010" class="aspect-square object-cover rounded-lg">
+    @if(imageSrc()){
+        <div class="flex flex-col w-1/3 gap-3">
+            <div class="flex justify-center border-2 border-gray-300 rounded-lg">
+                <img src="{{imageSrc()}}" class="aspect-square object-cover rounded-lg">
+            </div>
+            <div class="flex w-full gap-3">
+                <button (click)="onCancel()" class="btn flex-1">Cancel</button>
+                <button 
+                (click)="onUpload()" 
+                class="btn btn-primary flex-1"
+                [disabled]="loading()">
+                    @if(loading()){ <span class="loading loading-spinner"></span> }
+                    Submit</button>
+            </div>
         </div>
-        <div class="flex w-full gap-3">
-            <button class="btn flex-1">Cancel</button>
-            <button class="btn btn-primary flex-1">Submit</button>
-        </div>
-    </div>
+    }
+
 </div>
